# otel-example

./: Makefile  deployment.yaml
apps/example_app/: Dockerfile  pyproject.toml  requirements.txt
apps/example_app/kube/: deployment.yaml
apps/example_app/src/: main.py
manifests/otel/: collector.yaml  keys.yaml  python-instrumentation.yaml
